# NeoBIM_Workflow_Builder

./: .env.example  .env.vercel.production  .frontend-goat-status  .gitignore  .sentryclirc  8AM_LAUNCH_CHECKLIST.md  ACCESSIBILITY_FIXES_IMPLEMENTED.md  AGENT_ASSIGNMENTS_DAY2.md  ANALYTICS_FILES_SUMMARY.md  ANALYTICS_FINAL_STATUS.md  ANALYTICS_IMPLEMENTATION_PLAN.md  ANALYTICS_MISSION_COMPLETE.md  ANALYTICS_QUICK_REFERENCE.md  ANALYTICS_SETUP_COMPLETE.md  API_REVIEW_FINDINGS.md  ARCHITECT_VALIDATION_OVERNIGHT.md  BACKEND_FINAL_OPTIMIZATION.md  BACKEND_OPTIMIZATION_SUMMARY.txt  BUG_FIXES.md  CLAUDE.md  CODE_REVIEW_FINDINGS.md  COMPETITIVE_BATTLE_CARD.md  COMPLETION_SUMMARY.md  CONSTRUCTION_ENGINEER_VALIDATION.md  DAY2_8AM_BRIEFING.md  DAY2_BATTLE_PLAN_COMPLETE.md  DAY2_TASK_QUEUE.md  DELIVERY_REPORT.md  DELIVERY_SUMMARY.md  DEMO_READY_SUMMARY.md  DEPLOYMENT_CHECKLIST_FINAL.md  DISTRIBUTION_LAUNCH_READY.md  DISTRIBUTION_READY.sh  EMERGENCY_FIXES_COMPLETE.md  EMERGENCY_FIX_SUMMARY.md  FILE_STRUCTURE_GUIDE.md  FINAL_QA_REPORT.md  FINAL_QA_TEST_RESULTS.md  FIRST_BASELINE_REPORT.md  FRONTEND_FINAL_POLISH.md  (+78 more)
neobim-ifc-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml
neobim-ifc-service/app/: auth.py  config.py  main.py  state.py
neobim-ifc-service/app/models/: request.py  response.py
neobim-ifc-service/app/routers/: export.py  health.py
neobim-ifc-service/app/services/: beam_builder.py  column_builder.py  ifc_builder.py  material_library.py  mep_builder.py  opening_builder.py  property_sets.py  r2_uploader.py  slab_builder.py  space_builder.py  (+2 more)
(+521 files in other folders)
